chore: update biome.json rules
Added the `useSortedClasses` rule and set it to "off" under code style configuration. No functional changes.

--- a/biome.json
+++ b/biome.json
@@ -62,7 +62,8 @@
 						"noUnknownAtRule": "off",
 						"useExplicitType": "off",
 						"useForComponent": "off",
-						"useExportsLast": "off"
+						"useExportsLast": "off",
+						"useSortedClasses": "off"
 					},
 					"suspicious": {
 						"noReactSpecificProps": "off"
