feat(config): set homepage URL in package.json
Added the `homepage` field in `package.json` pointing to the GitHub Pages deployment URL. This enables proper asset linking when using `/yol-project/` as the base path.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "yol-project",
+	"homepage": "https://gabrielmaialva33.github.io/yol-project/",
 	"type": "module",
 	"license": "MIT",
 	"private": true,
