feat(build): add prebuild step for MSW initialization
Added a `prebuild` script to initialize Mock Service Worker (MSW) in the `public/` directory using `npx msw init`. This ensures the service worker is set up correctly before the build process.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"lint": "pnpm run \"/lint:./\"",
 		"format": "biome format",
 		"validate": "pnpm lint && pnpm test:ci && pnpm test:e2e:ci",
+		"prebuild": "npx msw init public/",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
