--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@faker-js/faker": "^9.9.0",
 		"@tanstack/react-query": "5.81.5",
 		"@tanstack/react-query-devtools": "5.81.5",
+		"@types/recharts": "^2.0.1",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-error-boundary": "6.0.0",
 		"react-router": "7.6.3",
+		"recharts": "^3.0.2",
 		"valibot": "1.1.0"
 	},
 	"devDependencies": {
