feat(config): add noSecrets rule to biome.json
Enabled the `noSecrets` rule in the `biome.json` configuration file under the `rules` section. This helps improve security by detecting and preventing potential secret leaks during development.

--- a/biome.json
+++ b/biome.json
@@ -63,7 +63,8 @@
 						"useExplicitType": "off",
 						"useForComponent": "off",
 						"useExportsLast": "off",
-						"useSortedClasses": "off"
+						"useSortedClasses": "off",
+						"noSecrets": "off"
 					},
 					"suspicious": {
 						"noReactSpecificProps": "off"
