--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
 		"@faker-js/faker": "^9.9.0",
 		"@tanstack/react-query": "5.81.5",
 		"@tanstack/react-query-devtools": "5.81.5",
+		"@types/luxon": "^3.6.2",
 		"@types/recharts": "^2.0.1",
+		"luxon": "^3.6.1",
 		"react": "19.1.0",
+		"react-day-picker": "^9.8.0",
 		"react-dom": "19.1.0",
 		"react-error-boundary": "6.0.0",
 		"react-router": "7.6.3",
