--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@tanstack/react-query-devtools": "5.81.5",
 		"@types/luxon": "^3.6.2",
 		"@types/recharts": "^2.0.1",
+		"autoprefixer": "^10.4.21",
 		"luxon": "^3.6.1",
 		"react": "19.1.0",
 		"react-day-picker": "^9.8.0",
@@ -33,6 +34,7 @@
 		"react-error-boundary": "6.0.0",
 		"react-router": "7.6.3",
 		"recharts": "^3.0.2",
+		"tailwindcss-animate": "^1.0.7",
 		"valibot": "1.1.0"
 	},
 	"devDependencies": {
