refactor(biome.json): disable noVoid rule for complexity linter
Updated the Biome configuration to disable the `noVoid` rule under the complexity linter. This change aligns the linter settings with the project's requirements.

--- a/biome.json
+++ b/biome.json
@@ -53,6 +53,9 @@
 			"includes": ["**/*"],
 			"linter": {
 				"rules": {
+					"complexity": {
+						"noVoid": "off"
+					},
 					"correctness": {
 						"useImportExtensions": "off",
 						"noUndeclaredDependencies": "off"
