--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/luxon": "^3.6.2",
 		"@types/recharts": "^2.0.1",
 		"autoprefixer": "^10.4.21",
+		"lucide-react": "^0.525.0",
 		"luxon": "^3.7.1",
 		"react": "19.1.0",
 		"react-day-picker": "^9.8.0",
