chore(config): disable `useIterableCallbackReturn` in `biome.json`

--- a/biome.json
+++ b/biome.json
@@ -68,7 +68,8 @@
 						"useExportsLast": "off",
 						"useSortedClasses": "off",
 						"noSecrets": "off",
-						"noExcessiveLinesPerFunction": "off"
+						"noExcessiveLinesPerFunction": "off",
+						"useIterableCallbackReturn": "off"
 					},
 					"suspicious": {
 						"noReactSpecificProps": "off"
