chore(linter): update biome config to include new test paths and adjust linter rules
Extended `includes` paths to cover `tests/**/*.spec.ts`. Disabled `noAwaitInLoop` in `nursery` rules.

--- a/biome.json
+++ b/biome.json
@@ -106,9 +106,12 @@
 			}
 		},
 		{
-			"includes": ["src/**/*.test.tsx"],
+			"includes": ["src/**/*.test.tsx", "tests/**/*.spec.ts"],
 			"linter": {
 				"rules": {
+					"nursery": {
+						"noAwaitInLoop": "off"
+					},
 					"performance": {
 						"useTopLevelRegex": "off"
 					}
