--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"dev": "vite --open",
 		"test": "vitest",
 		"test:e2e": "playwright test --ui",
+		"test:e2e:headed": "playwright test --headed",
+		"test:e2e:debug": "playwright test --debug",
 		"test:ci": "vitest run",
 		"test:e2e:ci": "playwright test",
 		"lint:tsc": "tsc -b",
@@ -52,6 +54,7 @@
 		"@types/react-dom": "19.1.6",
 		"@vitejs/plugin-react": "4.6.0",
 		"@vitest/coverage-v8": "3.2.4",
+		"axe-playwright": "^2.1.0",
 		"happy-dom": "18.0.1",
 		"msw": "2.10.3",
 		"tailwindcss": "4.1.11",
